Ajuste auditoria forma de carga

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #server.port=8080
 # dev remoto
-# spring.datasource.url=jdbc:postgresql://192.168.106.66:5432/siivra?escapeSyntaxCallMode=callIfNoReturn
-# spring.datasource.username=postgres
-# spring.datasource.password=gamaideam
-spring.datasource.url=jdbc:postgresql://20.206.137.255:11006/siivra?escapeSyntaxCallMode=callIfNoReturn
+spring.datasource.url=jdbc:postgresql://192.168.106.66:5432/siivra?escapeSyntaxCallMode=callIfNoReturn
 spring.datasource.username=postgres
-spring.datasource.password=SiiVRa481%
+spring.datasource.password=gamaideam
+# spring.datasource.url=jdbc:postgresql://20.206.137.255:11006/siivra?escapeSyntaxCallMode=callIfNoReturn
+# spring.datasource.username=postgres
+# spring.datasource.password=SiiVRa481%
 # spring.datasource.url=jdbc:postgresql://localhost:5432/prueba_dos?escapeSyntaxCallMode=callIfNoReturn
 # spring.datasource.username=postgres
 # spring.datasource.password=admin
